<resources>
    <string name="app_name">Disusa GYM</string>
    <!-- Home -->
    <string name="profile_icon_home">Profile Icon</string>
    <string name="hello">Hello,</string>
    <string name="user_greeting">Hello, %s</string>
    <string name="username">User</string>
    <string name="muscle_man_home">Muscle Man Picture</string>
    <string name="coins">49.3</string>
    <string name="coins_description">Coins Icon</string>
    <string name="coins_bt_description">Coin Wallet</string>
    <string name="steps_icon">Steps Icon</string>
    <string name="Nb_steps">10 763 STEPS</string>
    <string name="day">Monday, 10 nov 2023 : </string>
    <string name="workout_today">Legs + ABS</string>
    <string name="bt_background_description">Background bt</string>
    <string name="barre_degrade_description">Degraded Bar</string>
    <string name="workouts_icon_description">Workouts Icon</string>
    <string name="steps_bt_description">Access Your Walking Data</string>
    <string name="workout_today_bt_description">Review today\'s workout</string>
    <string name="shop_icon_description">Shop Icon</string>
    <string name="work_bt">Workouts</string>
    <string name="workouts_bt_description">Display the complete list of exercises and workouts</string>
    <string name="shop_bt">Shop</string>
    <string name="shop_bt_description">Shop menu</string>


    <!-- Calender -->
    <string name="select_typ_months">Months</string>
    <string name="select_typ_weeks">Weeks</string>
    <string name="about_exercice">Press For More Informations</string>
    <string name="exercice_noun">Bench Press</string>
    <string name="Nb_sets_enter">3</string>
    <string name="Nb_rep_enter">12</string>
    <string name="x">X</string>
    <!-- Days -->
    <string name="day_mo">Mo</string>
    <string name="day_tu">Tu</string>
    <string name="day_we">We</string>
    <string name="day_th">Th</string>
    <string name="day_fr">Fr</string>
    <string name="day_sa">Sa</string>
    <string name="day_su">Su</string>
    <!-- Days num -->
    <string name="day_1">1</string>
    <string name="day_2">2</string>
    <string name="day_3">3</string>
    <string name="day_4">4</string>
    <string name="day_5">5</string>
    <string name="day_6">6</string>
    <string name="day_7">7</string>
    <string name="day_8">8</string>
    <string name="day_9">9</string>
    <string name="day_10">10</string>
    <string name="day_11">11</string>
    <string name="day_12">12</string>
    <string name="day_13">13</string>
    <string name="day_14">14</string>
    <string name="day_15">15</string>
    <string name="day_16">16</string>
    <string name="day_17">17</string>
    <string name="day_18">18</string>
    <string name="day_19">19</string>
    <string name="day_20">20</string>
    <string name="day_21">21</string>
    <string name="day_22">22</string>
    <string name="day_23">23</string>
    <string name="day_24">24</string>
    <string name="day_25">25</string>
    <string name="day_26">26</string>
    <string name="day_27">27</string>
    <string name="day_28">28</string>
    <string name="day_29">29</string>
    <string name="day_30">30</string>
    <string name="day_31">31</string>


    <!-- About exercice -->
    <string name="exercice_noun_about">Bench Press</string>
    <string name="string_set">Nb of sets</string>
    <string name="string_rep">Nb of reps</string>
    <string name="string_weight">Weight</string>
    <string name="weight_exercice_enter">40</string>
    <string name="string_kg">Kg</string>
    <string name="string_speed">Exercice speed</string>
    <string-array name="exercice_speed_enter">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>
    <string name="string_about">Target Muscles : </string>
    <string name="description_exercice">- Chest  - Triceps  - Anterior Deltoids </string>
    <string name="progress_but">View my progress</string>


    <!-- Account -->
    <string name="height_user_title">Height</string>
    <string name="height_user">172cm</string>
    <string name="weight_user_title">Weight</string>
    <string name="weight_user">65Kg</string>
    <string name="bmi_user_title">BMI</string>
    <string name="bmi_user">21.7</string>
    <string name="goals_menu">My Goals</string>
    <string name="nutrition_menu">Nutrition</string>
    <string name="subscription_menu">Subscription</string>
    <string name="media_follow">Follow Us</string>


    <!-- Footer nav menu -->
    <string name="home_icon_description">Home Icon Menu</string>
    <string name="stats_icon_description">Progress Icon Menu</string>
    <string name="calender_icon_description">Calender Icon Menu</string>
    <string name="account_icon_description">Account Icon Menu</string>
    <string name="settings_icon_description">Settings Icon Menu</string>
</resources>