<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home_white"
        android:contentDescription="@string/home_icon_description"
        android:title=""/>

    <item
        android:id="@+id/stat"
        android:icon="@drawable/progress"
        android:contentDescription="@string/stats_icon_description"
        android:title=""/>

    <item
        android:id="@+id/calender"
        android:icon="@drawable/calender_white"
        android:contentDescription="@string/calender_icon_description"
        android:title=""/>

    <item
        android:id="@+id/account"
        android:icon="@drawable/account"
        android:contentDescription="@string/account_icon_description"
        android:title=""/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:contentDescription="@string/settings_icon_description"
        android:title=""/>
</menu>